--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <title>cljScale</title>
   </head>
-  <body class="body">  
+  <body class="body">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+      <div class="container">
+	<!-- Brand and toggle get grouped for better mobile display -->
+	<div class="navbar-header">
+	  <a class="navbar-brand" href="/" style="color: #4A95C4"><b style="color: #757574">My Guitar</b> <b>Kit</b></a>
+	</div>
+      </div>
+    </nav>
     <div class="container-fluid main-frame">
       <div id="main" class="main">
       </div>
